// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar  default avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG-42",
        "MD": "HvAvatar-MD-41",
        "SM": "HvAvatar-SM-40",
        "XL": "HvAvatar-XL-43",
        "XS": "HvAvatar-XS-39",
        "avatar": "HvAvatar-avatar-37",
        "badge": "HvAvatar-badge-38",
        "circular": "HvAvatar-circular-44",
        "container": "HvAvatar-container-35",
        "fallback": "HvAvatar-fallback-34",
        "img": "HvAvatar-img-33",
        "root": "HvAvatar-root-32",
        "status": "HvAvatar-status-36",
      }
    }
  >
    <div
      className="HvAvatar-container-35"
    >
      <div
        className="HvAvatar-status-36 HvAvatar-circular-44 HvAvatar-SM-40"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root-32 HvAvatar-avatar-37 HvAvatar-SM-40"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-32 HvAvatar-avatar-37 HvAvatar-SM-40"
            ownerState={
              Object {
                "children": <User
                  className="HvAvatar-fallback-34"
                  color="atmo1"
                  iconSize="XS"
                />,
                "className": "HvAvatar-root-32 HvAvatar-avatar-37 HvAvatar-SM-40",
                "colorDefault": true,
                "component": "div",
                "style": Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                },
                "variant": "circular",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-14 {
  display: flex;
}
.HvIconBase-root-14 svg {
  margin: auto;
}
.HvIconBase-xs-15 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-16 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-17 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-18 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-45 {
  display: flex;
}
.HvIconBase-root-45 svg {
  margin: auto;
}
.HvIconBase-xs-46 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-47 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-48 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-49 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-1 {
  font-size: 1rem;
}
.HvAvatar-img-2 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-4:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-5 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-5.HvAvatar-XS-8 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-5.HvAvatar-SM-9 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-5.HvAvatar-MD-10 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-5.HvAvatar-LG-11 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-5.HvAvatar-XL-12 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-6.HvAvatar-XS-8 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-6.HvAvatar-SM-9 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-6.HvAvatar-MD-10 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-6.HvAvatar-LG-11 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-6.HvAvatar-XL-12 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-7 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-13 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-19 {
  font-size: 1rem;
}
.HvAvatar-img-20 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-22:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-23 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-23.HvAvatar-XS-26 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-23.HvAvatar-SM-27 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-23.HvAvatar-MD-28 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-23.HvAvatar-LG-29 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-23.HvAvatar-XL-30 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-24.HvAvatar-XS-26 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-24.HvAvatar-SM-27 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-24.HvAvatar-MD-28 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-24.HvAvatar-LG-29 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-24.HvAvatar-XL-30 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-25 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-31 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-32 {
  font-size: 1rem;
}
.HvAvatar-img-33 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-35:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-36 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-36.HvAvatar-XS-39 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-36.HvAvatar-SM-40 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-36.HvAvatar-MD-41 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-36.HvAvatar-LG-42 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-36.HvAvatar-XL-43 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-37.HvAvatar-XS-39 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-37.HvAvatar-SM-40 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-37.HvAvatar-MD-41 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-37.HvAvatar-LG-42 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-37.HvAvatar-XL-43 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-38 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-44 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-50 {
  font-size: 1rem;
}
.HvAvatar-img-51 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-53:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-54 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-54.HvAvatar-XS-57 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-54.HvAvatar-SM-58 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-54.HvAvatar-MD-59 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-54.HvAvatar-LG-60 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-54.HvAvatar-XL-61 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-55.HvAvatar-XS-57 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-55.HvAvatar-SM-58 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-55.HvAvatar-MD-59 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-55.HvAvatar-LG-60 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-55.HvAvatar-XL-61 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-56 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-62 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-63 {
  font-size: 1rem;
}
.HvAvatar-img-64 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-66:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-67 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-67.HvAvatar-XS-70 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-67.HvAvatar-SM-71 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-67.HvAvatar-MD-72 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-67.HvAvatar-LG-73 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-67.HvAvatar-XL-74 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-68.HvAvatar-XS-70 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-68.HvAvatar-SM-71 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-68.HvAvatar-MD-72 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-68.HvAvatar-LG-73 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-68.HvAvatar-XL-74 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-69 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-75 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-76 {
  font-size: 1rem;
}
.HvAvatar-img-77 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-79:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-80 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-80.HvAvatar-XS-83 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-80.HvAvatar-SM-84 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-80.HvAvatar-MD-85 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-80.HvAvatar-LG-86 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-80.HvAvatar-XL-87 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-81.HvAvatar-XS-83 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-81.HvAvatar-SM-84 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-81.HvAvatar-MD-85 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-81.HvAvatar-LG-86 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-81.HvAvatar-XL-87 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-82 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-88 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-89 {
  font-size: 1rem;
}
.HvAvatar-img-90 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-92:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-93 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-93.HvAvatar-XS-96 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-93.HvAvatar-SM-97 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-93.HvAvatar-MD-98 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-93.HvAvatar-LG-99 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-93.HvAvatar-XL-100 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-94.HvAvatar-XS-96 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-94.HvAvatar-SM-97 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-94.HvAvatar-MD-98 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-94.HvAvatar-LG-99 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-94.HvAvatar-XL-100 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-95 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-101 {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-32 HvAvatar-avatar-37 HvAvatar-SM-40 css-1mo7jmj-MuiAvatar-root"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              <User
                className="HvAvatar-fallback-34"
                color="atmo1"
                iconSize="XS"
              >
                <HvIconBase
                  className="HvAvatar-fallback-34"
                  iconSize="XS"
                  name="User"
                >
                  <div
                    className="HvAvatar-fallback-34 HvIconBase-root-45 HvIconBase-xs-46"
                    name="User"
                  >
                    <svg
                      focusable={false}
                      height={12}
                      viewBox="0 0 16 16"
                      width={12}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M9.6 8.7A4.49656 4.49656 0 008.03809 0Q8.019-.00007 8 0a4.481 4.481 0 00-4.5 4.46194q-.00009.019 0 .03808A4.563 4.563 0 006.4 8.7 7.687 7.687 0 00.5 16h1a6.487 6.487 0 016.474-6.5H8a6.487 6.487 0 016.5 6.474V16h1a7.493 7.493 0 00-5.9-7.3zM4.5 4.5A3.543 3.543 0 018 1a3.543 3.543 0 013.5 3.5A3.543 3.543 0 018 8a3.543 3.543 0 01-3.5-3.5z"
                        fill="#FBFCFC"
                      />
                    </svg>
                  </div>
                </HvIconBase>
              </User>
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  icon avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG-11",
        "MD": "HvAvatar-MD-10",
        "SM": "HvAvatar-SM-9",
        "XL": "HvAvatar-XL-12",
        "XS": "HvAvatar-XS-8",
        "avatar": "HvAvatar-avatar-6",
        "badge": "HvAvatar-badge-7",
        "circular": "HvAvatar-circular-13",
        "container": "HvAvatar-container-4",
        "fallback": "HvAvatar-fallback-3",
        "img": "HvAvatar-img-2",
        "root": "HvAvatar-root-1",
        "status": "HvAvatar-status-5",
      }
    }
  >
    <div
      className="HvAvatar-container-4"
    >
      <div
        className="HvAvatar-status-5 HvAvatar-circular-13 HvAvatar-SM-9"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root-1 HvAvatar-avatar-6 HvAvatar-SM-9"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-1 HvAvatar-avatar-6 HvAvatar-SM-9"
            ownerState={
              Object {
                "children": <LogIn
                  iconSize="XS"
                />,
                "className": "HvAvatar-root-1 HvAvatar-avatar-6 HvAvatar-SM-9",
                "colorDefault": true,
                "component": "div",
                "style": Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                },
                "variant": "circular",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-14 {
  display: flex;
}
.HvIconBase-root-14 svg {
  margin: auto;
}
.HvIconBase-xs-15 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-16 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-17 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-18 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-45 {
  display: flex;
}
.HvIconBase-root-45 svg {
  margin: auto;
}
.HvIconBase-xs-46 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-47 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-48 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-49 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-1 {
  font-size: 1rem;
}
.HvAvatar-img-2 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-4:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-5 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-5.HvAvatar-XS-8 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-5.HvAvatar-SM-9 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-5.HvAvatar-MD-10 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-5.HvAvatar-LG-11 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-5.HvAvatar-XL-12 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-6.HvAvatar-XS-8 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-6.HvAvatar-SM-9 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-6.HvAvatar-MD-10 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-6.HvAvatar-LG-11 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-6.HvAvatar-XL-12 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-7 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-13 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-19 {
  font-size: 1rem;
}
.HvAvatar-img-20 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-22:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-23 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-23.HvAvatar-XS-26 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-23.HvAvatar-SM-27 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-23.HvAvatar-MD-28 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-23.HvAvatar-LG-29 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-23.HvAvatar-XL-30 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-24.HvAvatar-XS-26 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-24.HvAvatar-SM-27 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-24.HvAvatar-MD-28 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-24.HvAvatar-LG-29 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-24.HvAvatar-XL-30 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-25 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-31 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-32 {
  font-size: 1rem;
}
.HvAvatar-img-33 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-35:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-36 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-36.HvAvatar-XS-39 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-36.HvAvatar-SM-40 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-36.HvAvatar-MD-41 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-36.HvAvatar-LG-42 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-36.HvAvatar-XL-43 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-37.HvAvatar-XS-39 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-37.HvAvatar-SM-40 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-37.HvAvatar-MD-41 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-37.HvAvatar-LG-42 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-37.HvAvatar-XL-43 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-38 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-44 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-50 {
  font-size: 1rem;
}
.HvAvatar-img-51 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-53:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-54 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-54.HvAvatar-XS-57 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-54.HvAvatar-SM-58 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-54.HvAvatar-MD-59 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-54.HvAvatar-LG-60 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-54.HvAvatar-XL-61 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-55.HvAvatar-XS-57 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-55.HvAvatar-SM-58 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-55.HvAvatar-MD-59 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-55.HvAvatar-LG-60 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-55.HvAvatar-XL-61 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-56 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-62 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-63 {
  font-size: 1rem;
}
.HvAvatar-img-64 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-66:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-67 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-67.HvAvatar-XS-70 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-67.HvAvatar-SM-71 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-67.HvAvatar-MD-72 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-67.HvAvatar-LG-73 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-67.HvAvatar-XL-74 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-68.HvAvatar-XS-70 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-68.HvAvatar-SM-71 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-68.HvAvatar-MD-72 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-68.HvAvatar-LG-73 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-68.HvAvatar-XL-74 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-69 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-75 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-76 {
  font-size: 1rem;
}
.HvAvatar-img-77 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-79:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-80 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-80.HvAvatar-XS-83 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-80.HvAvatar-SM-84 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-80.HvAvatar-MD-85 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-80.HvAvatar-LG-86 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-80.HvAvatar-XL-87 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-81.HvAvatar-XS-83 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-81.HvAvatar-SM-84 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-81.HvAvatar-MD-85 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-81.HvAvatar-LG-86 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-81.HvAvatar-XL-87 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-82 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-88 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-89 {
  font-size: 1rem;
}
.HvAvatar-img-90 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-92:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-93 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-93.HvAvatar-XS-96 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-93.HvAvatar-SM-97 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-93.HvAvatar-MD-98 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-93.HvAvatar-LG-99 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-93.HvAvatar-XL-100 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-94.HvAvatar-XS-96 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-94.HvAvatar-SM-97 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-94.HvAvatar-MD-98 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-94.HvAvatar-LG-99 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-94.HvAvatar-XL-100 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-95 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-101 {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-1 HvAvatar-avatar-6 HvAvatar-SM-9 css-1mo7jmj-MuiAvatar-root"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              <LogIn
                iconSize="XS"
              >
                <HvIconBase
                  iconSize="XS"
                  name="LogIn"
                >
                  <div
                    className="HvIconBase-root-14 HvIconBase-xs-15"
                    name="LogIn"
                  >
                    <svg
                      focusable={false}
                      height={12}
                      viewBox="0 0 16 16"
                      width={12}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M16 16H6v-1h9V1H6V0h10zm-7.69995-4.5L9 12.2 13.2 8 9 3.8l-.69995.7 3 3H1v1h10.30005z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </HvIconBase>
              </LogIn>
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  image avatar snapshot 1`] = `
<WithStyles(HvAvatar)
  imgProps={
    Object {
      "onError": [Function],
      "other": "my value",
    }
  }
  src="something.jpg"
>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG-99",
        "MD": "HvAvatar-MD-98",
        "SM": "HvAvatar-SM-97",
        "XL": "HvAvatar-XL-100",
        "XS": "HvAvatar-XS-96",
        "avatar": "HvAvatar-avatar-94",
        "badge": "HvAvatar-badge-95",
        "circular": "HvAvatar-circular-101",
        "container": "HvAvatar-container-92",
        "fallback": "HvAvatar-fallback-91",
        "img": "HvAvatar-img-90",
        "root": "HvAvatar-root-89",
        "status": "HvAvatar-status-93",
      }
    }
    imgProps={
      Object {
        "onError": [Function],
        "other": "my value",
      }
    }
    src="something.jpg"
  >
    <div
      className="HvAvatar-container-92"
    >
      <div
        className="HvAvatar-status-93 HvAvatar-circular-101 HvAvatar-SM-97"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root-89 HvAvatar-avatar-94 HvAvatar-SM-97"
          style={Object {}}
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-89 HvAvatar-avatar-94 HvAvatar-SM-97"
            ownerState={
              Object {
                "children": <img
                  className="HvAvatar-img-90"
                  onError={[Function]}
                  other="my value"
                  src="something.jpg"
                />,
                "className": "HvAvatar-root-89 HvAvatar-avatar-94 HvAvatar-SM-97",
                "colorDefault": true,
                "component": "div",
                "style": Object {},
                "variant": "circular",
              }
            }
            style={Object {}}
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-14 {
  display: flex;
}
.HvIconBase-root-14 svg {
  margin: auto;
}
.HvIconBase-xs-15 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-16 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-17 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-18 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-45 {
  display: flex;
}
.HvIconBase-root-45 svg {
  margin: auto;
}
.HvIconBase-xs-46 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-47 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-48 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-49 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-1 {
  font-size: 1rem;
}
.HvAvatar-img-2 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-4:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-5 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-5.HvAvatar-XS-8 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-5.HvAvatar-SM-9 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-5.HvAvatar-MD-10 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-5.HvAvatar-LG-11 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-5.HvAvatar-XL-12 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-6.HvAvatar-XS-8 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-6.HvAvatar-SM-9 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-6.HvAvatar-MD-10 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-6.HvAvatar-LG-11 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-6.HvAvatar-XL-12 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-7 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-13 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-19 {
  font-size: 1rem;
}
.HvAvatar-img-20 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-22:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-23 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-23.HvAvatar-XS-26 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-23.HvAvatar-SM-27 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-23.HvAvatar-MD-28 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-23.HvAvatar-LG-29 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-23.HvAvatar-XL-30 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-24.HvAvatar-XS-26 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-24.HvAvatar-SM-27 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-24.HvAvatar-MD-28 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-24.HvAvatar-LG-29 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-24.HvAvatar-XL-30 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-25 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-31 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-32 {
  font-size: 1rem;
}
.HvAvatar-img-33 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-35:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-36 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-36.HvAvatar-XS-39 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-36.HvAvatar-SM-40 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-36.HvAvatar-MD-41 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-36.HvAvatar-LG-42 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-36.HvAvatar-XL-43 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-37.HvAvatar-XS-39 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-37.HvAvatar-SM-40 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-37.HvAvatar-MD-41 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-37.HvAvatar-LG-42 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-37.HvAvatar-XL-43 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-38 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-44 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-50 {
  font-size: 1rem;
}
.HvAvatar-img-51 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-53:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-54 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-54.HvAvatar-XS-57 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-54.HvAvatar-SM-58 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-54.HvAvatar-MD-59 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-54.HvAvatar-LG-60 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-54.HvAvatar-XL-61 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-55.HvAvatar-XS-57 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-55.HvAvatar-SM-58 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-55.HvAvatar-MD-59 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-55.HvAvatar-LG-60 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-55.HvAvatar-XL-61 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-56 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-62 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-63 {
  font-size: 1rem;
}
.HvAvatar-img-64 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-66:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-67 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-67.HvAvatar-XS-70 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-67.HvAvatar-SM-71 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-67.HvAvatar-MD-72 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-67.HvAvatar-LG-73 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-67.HvAvatar-XL-74 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-68.HvAvatar-XS-70 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-68.HvAvatar-SM-71 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-68.HvAvatar-MD-72 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-68.HvAvatar-LG-73 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-68.HvAvatar-XL-74 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-69 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-75 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-76 {
  font-size: 1rem;
}
.HvAvatar-img-77 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-79:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-80 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-80.HvAvatar-XS-83 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-80.HvAvatar-SM-84 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-80.HvAvatar-MD-85 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-80.HvAvatar-LG-86 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-80.HvAvatar-XL-87 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-81.HvAvatar-XS-83 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-81.HvAvatar-SM-84 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-81.HvAvatar-MD-85 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-81.HvAvatar-LG-86 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-81.HvAvatar-XL-87 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-82 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-88 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-89 {
  font-size: 1rem;
}
.HvAvatar-img-90 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-92:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-93 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-93.HvAvatar-XS-96 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-93.HvAvatar-SM-97 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-93.HvAvatar-MD-98 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-93.HvAvatar-LG-99 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-93.HvAvatar-XL-100 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-94.HvAvatar-XS-96 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-94.HvAvatar-SM-97 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-94.HvAvatar-MD-98 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-94.HvAvatar-LG-99 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-94.HvAvatar-XL-100 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-95 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-101 {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-89 HvAvatar-avatar-94 HvAvatar-SM-97 css-1mo7jmj-MuiAvatar-root"
              style={Object {}}
            >
              <img
                className="HvAvatar-img-90"
                onError={[Function]}
                other="my value"
                src="something.jpg"
              />
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  letter avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG-29",
        "MD": "HvAvatar-MD-28",
        "SM": "HvAvatar-SM-27",
        "XL": "HvAvatar-XL-30",
        "XS": "HvAvatar-XS-26",
        "avatar": "HvAvatar-avatar-24",
        "badge": "HvAvatar-badge-25",
        "circular": "HvAvatar-circular-31",
        "container": "HvAvatar-container-22",
        "fallback": "HvAvatar-fallback-21",
        "img": "HvAvatar-img-20",
        "root": "HvAvatar-root-19",
        "status": "HvAvatar-status-23",
      }
    }
  >
    <div
      className="HvAvatar-container-22"
    >
      <div
        className="HvAvatar-status-23 HvAvatar-circular-31 HvAvatar-SM-27"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root-19 HvAvatar-avatar-24 HvAvatar-SM-27"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-19 HvAvatar-avatar-24 HvAvatar-SM-27"
            ownerState={
              Object {
                "children": "OT",
                "className": "HvAvatar-root-19 HvAvatar-avatar-24 HvAvatar-SM-27",
                "colorDefault": true,
                "component": "div",
                "style": Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                },
                "variant": "circular",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-14 {
  display: flex;
}
.HvIconBase-root-14 svg {
  margin: auto;
}
.HvIconBase-xs-15 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-16 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-17 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-18 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root-45 {
  display: flex;
}
.HvIconBase-root-45 svg {
  margin: auto;
}
.HvIconBase-xs-46 {
  width: 32px;
  height: 32px;
}
.HvIconBase-s-47 {
  width: 32px;
  height: 32px;
}
.HvIconBase-m-48 {
  width: 48px;
  height: 48px;
}
.HvIconBase-l-49 {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-1 {
  font-size: 1rem;
}
.HvAvatar-img-2 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-4:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-5 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-5.HvAvatar-XS-8 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-5.HvAvatar-SM-9 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-5.HvAvatar-MD-10 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-5.HvAvatar-LG-11 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-5.HvAvatar-XL-12 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-6.HvAvatar-XS-8 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-6.HvAvatar-SM-9 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-6.HvAvatar-MD-10 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-6.HvAvatar-LG-11 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-6.HvAvatar-XL-12 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-7 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-13 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-19 {
  font-size: 1rem;
}
.HvAvatar-img-20 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-22:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-23 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-23.HvAvatar-XS-26 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-23.HvAvatar-SM-27 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-23.HvAvatar-MD-28 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-23.HvAvatar-LG-29 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-23.HvAvatar-XL-30 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-24.HvAvatar-XS-26 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-24.HvAvatar-SM-27 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-24.HvAvatar-MD-28 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-24.HvAvatar-LG-29 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-24.HvAvatar-XL-30 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-25 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-31 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-32 {
  font-size: 1rem;
}
.HvAvatar-img-33 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-35:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-36 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-36.HvAvatar-XS-39 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-36.HvAvatar-SM-40 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-36.HvAvatar-MD-41 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-36.HvAvatar-LG-42 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-36.HvAvatar-XL-43 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-37.HvAvatar-XS-39 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-37.HvAvatar-SM-40 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-37.HvAvatar-MD-41 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-37.HvAvatar-LG-42 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-37.HvAvatar-XL-43 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-38 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-44 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-50 {
  font-size: 1rem;
}
.HvAvatar-img-51 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-53:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-54 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-54.HvAvatar-XS-57 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-54.HvAvatar-SM-58 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-54.HvAvatar-MD-59 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-54.HvAvatar-LG-60 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-54.HvAvatar-XL-61 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-55.HvAvatar-XS-57 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-55.HvAvatar-SM-58 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-55.HvAvatar-MD-59 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-55.HvAvatar-LG-60 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-55.HvAvatar-XL-61 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-56 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-62 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-63 {
  font-size: 1rem;
}
.HvAvatar-img-64 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-66:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-67 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-67.HvAvatar-XS-70 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-67.HvAvatar-SM-71 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-67.HvAvatar-MD-72 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-67.HvAvatar-LG-73 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-67.HvAvatar-XL-74 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-68.HvAvatar-XS-70 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-68.HvAvatar-SM-71 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-68.HvAvatar-MD-72 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-68.HvAvatar-LG-73 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-68.HvAvatar-XL-74 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-69 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-75 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-76 {
  font-size: 1rem;
}
.HvAvatar-img-77 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-79:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-80 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-80.HvAvatar-XS-83 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-80.HvAvatar-SM-84 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-80.HvAvatar-MD-85 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-80.HvAvatar-LG-86 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-80.HvAvatar-XL-87 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-81.HvAvatar-XS-83 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-81.HvAvatar-SM-84 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-81.HvAvatar-MD-85 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-81.HvAvatar-LG-86 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-81.HvAvatar-XL-87 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-82 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-88 {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root-89 {
  font-size: 1rem;
}
.HvAvatar-img-90 {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container-92:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status-93 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status-93.HvAvatar-XS-96 {
  width: 32px;
  height: 32px;
}
.HvAvatar-status-93.HvAvatar-SM-97 {
  width: 40px;
  height: 40px;
}
.HvAvatar-status-93.HvAvatar-MD-98 {
  width: 48px;
  height: 48px;
}
.HvAvatar-status-93.HvAvatar-LG-99 {
  width: 60px;
  height: 60px;
}
.HvAvatar-status-93.HvAvatar-XL-100 {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar-94.HvAvatar-XS-96 {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar-94.HvAvatar-SM-97 {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar-94.HvAvatar-MD-98 {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar-94.HvAvatar-LG-99 {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar-94.HvAvatar-XL-100 {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge-95 {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular-101 {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root-19 HvAvatar-avatar-24 HvAvatar-SM-27 css-1mo7jmj-MuiAvatar-root"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              OT
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;
